ssim comparision added

--- a/Code Files/Thesis.ipynb
+++ b/Code Files/Thesis.ipynb
@@ -1119,6 +1119,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from skimage.metrics import structural_similarity as ssim\n",
     "import os\n",
     "\n",
     "def calculate_psnr(image1, image2):\n",
@@ -1129,14 +1130,19 @@
     "    psnr = 20 * np.log10(max_pixel / np.sqrt(mse))\n",
     "    return psnr\n",
     "\n",
+    "def calculate_ssim(image1, image2):\n",
+    "    ssim_value, _ = ssim(image1, image2, full=True)\n",
+    "    return ssim_value\n",
+    "\n",
     "def load_image(image_path):\n",
     "    return cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
     "\n",
-    "def show_images_with_psnr(image_path1, image_path2, save_dir):\n",
+    "def show_images_with_metrics(image_path1, image_path2, save_dir):\n",
     "    img1 = load_image(image_path1)\n",
     "    img2 = load_image(image_path2)\n",
     "\n",
     "    psnr_value = calculate_psnr(img1, img2)\n",
+    "    ssim_value = calculate_ssim(img1, img2)\n",
     "\n",
     "    plt.figure(figsize=(10, 4.5))\n",
     "\n",
@@ -1148,11 +1154,11 @@
     "\n",
     "    # Display second image\n",
     "    plt.subplot(1, 2, 2)\n",
-    "    plt.imshow(img2, cmap='gray') \n",
+    "    plt.imshow(img2, cmap='gray')\n",
     "    plt.title('Our Result')\n",
     "    plt.axis('off')\n",
     "\n",
-    "    plt.suptitle(f\"PSNR Value: {psnr_value:.2f} dB\")\n",
+    "    plt.suptitle(f\"PSNR Value: {psnr_value:.2f} dB, SSIM Value: {ssim_value:.2f}\")\n",
     "\n",
     "    # Save the figure\n",
     "    save_path = os.path.join(save_dir, \"comparison_image.jpg\")\n",
@@ -1166,7 +1172,7 @@
     "image_path1 = 'Datasets/JPG/Dataset_7/2725_-4_Rio16_40kX_0174.jpg'\n",
     "image_path2 = 'Output/Output_28_Dataset_3/frames/frames_output_enhancer/frame_0.jpg'\n",
     "\n",
-    "show_images_with_psnr(image_path1, image_path2, save_directory)\n"
+    "show_images_with_metrics(image_path1, image_path2, save_directory)\n"
    ]
   }
  ],
