best psnr valued images script added

--- a/Code Files/Thesis.ipynb
+++ b/Code Files/Thesis.ipynb
@@ -826,8 +826,8 @@
     "        print(f\"Frame {i} saved as {frame_filename}\")\n",
     "\n",
     "# Usage\n",
-    "gif_path = 'Output/Output_9_Dataset_4_Without_Enhancement_10000_epochs/TEM_Data_img.gif'  \n",
-    "output_folder = 'Output/Output_28_Dataset_3/frames'  # Replace with your desired output path\n",
+    "gif_path = 'Output/Output_5_Dataset_4/TEM_Data_img.gif'  \n",
+    "output_folder = 'Output/Output_5_Dataset_4/frames'  # Replace with your desired output path\n",
     "\n",
     "extract_and_save_frames_from_gif(gif_path, output_folder)\n"
    ]
@@ -1137,42 +1137,56 @@
     "def load_image(image_path):\n",
     "    return cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
     "\n",
-    "def show_images_with_metrics(image_path1, image_path2, save_dir):\n",
+    "def show_images_with_metrics(image_path1, folder_path, save_dir):\n",
     "    img1 = load_image(image_path1)\n",
-    "    img2 = load_image(image_path2)\n",
     "\n",
-    "    psnr_value = calculate_psnr(img1, img2)\n",
-    "    ssim_value = calculate_ssim(img1, img2)\n",
+    "    max_psnr_value = -1\n",
+    "    best_img_path = None\n",
+    "    best_img = None\n",
     "\n",
-    "    plt.figure(figsize=(10, 4.5))\n",
+    "    for filename in os.listdir(folder_path):\n",
+    "        image_path2 = os.path.join(folder_path, filename)\n",
+    "        if os.path.isfile(image_path2):\n",
+    "            img2 = load_image(image_path2)\n",
+    "            psnr_value = calculate_psnr(img1, img2)\n",
     "\n",
-    "    # Display first image\n",
-    "    plt.subplot(1, 2, 1)\n",
-    "    plt.imshow(img1, cmap='gray')\n",
-    "    plt.title('Input TEM Image')\n",
-    "    plt.axis('off')\n",
+    "            if psnr_value > max_psnr_value:\n",
+    "                max_psnr_value = psnr_value\n",
+    "                best_img_path = image_path2\n",
+    "                best_img = img2\n",
     "\n",
-    "    # Display second image\n",
-    "    plt.subplot(1, 2, 2)\n",
-    "    plt.imshow(img2, cmap='gray')\n",
-    "    plt.title('Our Result')\n",
-    "    plt.axis('off')\n",
+    "    if best_img is not None:\n",
+    "        ssim_value = calculate_ssim(img1, best_img)\n",
     "\n",
-    "    plt.suptitle(f\"PSNR Value: {psnr_value:.2f} dB, SSIM Value: {ssim_value:.2f}\")\n",
+    "        plt.figure(figsize=(10, 4.5))\n",
     "\n",
-    "    # Save the figure\n",
-    "    save_path = os.path.join(save_dir, \"comparison_image.jpg\")\n",
-    "    plt.savefig(save_path)\n",
-    "    print(f\"Image saved to {save_path}\")\n",
+    "        # Display first image\n",
+    "        plt.subplot(1, 2, 1)\n",
+    "        plt.imshow(img1, cmap='gray')\n",
+    "        plt.title('Input TEM Image')\n",
+    "        plt.axis('off')\n",
+    "\n",
+    "        # Display best matched image\n",
+    "        plt.subplot(1, 2, 2)\n",
+    "        plt.imshow(best_img, cmap='gray')\n",
+    "        plt.title('Best Matched Result')\n",
+    "        plt.axis('off')\n",
+    "\n",
+    "        plt.suptitle(f\"Best PSNR Value: {max_psnr_value:.2f} dB, SSIM Value: {ssim_value:.2f}\")\n",
+    "\n",
+    "        # Save the figure\n",
+    "        save_path = os.path.join(save_dir, \"best_comparison_image.jpg\")\n",
+    "        plt.savefig(save_path)\n",
+    "        print(f\"Image saved to {save_path}\")\n",
     "\n",
     "# Make sure the directory exists where you want to save the images\n",
     "save_directory = 'Comparism Output'\n",
     "os.makedirs(save_directory, exist_ok=True)\n",
     "\n",
-    "image_path1 = 'Datasets/JPG/Dataset_7/2725_-4_Rio16_40kX_0174.jpg'\n",
-    "image_path2 = 'Output/Output_28_Dataset_3/frames/frames_output_enhancer/frame_0.jpg'\n",
+    "image_path1 = 'Datasets/JPG/Dataset_4/Janustomo2_-16.81.jpg'\n",
+    "folder_path = 'Output/Output_5_Dataset_4/frames/'\n",
     "\n",
-    "show_images_with_metrics(image_path1, image_path2, save_directory)\n"
+    "show_images_with_metrics(image_path1, folder_path, save_directory)\n"
    ]
   }
  ],
